--- a/package.json
+++ b/package.json
@@ -13,5 +13,16 @@
   "devDependencies": {
     "@playwright/test": "^1.39.0",
     "@types/node": "^20.9.0"
-  }
+  },
+
+"scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "build:storybook": "node ./scripts/storybook.js",
+  "test:unit": "react-scripts test",
+  "test:e2e": "node ./scripts/e2e.test.js",
+  "lint": "node ./scripts/eslint.js",
+  "type:check": "node ./scripts/typecheck.js",
+  "i18n:check": "node ./scripts/i18n-check.js"
+}
 }
